# cxx-json-codegen

./: .clang-format  .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  DISCUSSIONS.md  LICENSE  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
cmake/: CJMGenerate.cmake  CJMTreeSitterSpike.cmake
docs/: branding.md  design.md  philosophy.md  roadmap.md  vision.md
docs/community/: early-adopter-launch-posts.md  early-adopter-outreach.md
docs/design/: backend-strategy.md  build-pipeline.md  cmake-integration.md  code-generator.md  competitive-landscape.md  frontend-parser-fixture-inventory.md  json-mapping-scope.md  metadata-model.md  parser.md  project-layout.md  semantic-analysis.md  tree-sitter-dependency-assessment.md  tree-sitter-frontend-spike.md
docs/dogfood/: ull-md-engine-v0.3.0.md
docs/releases/: v0.1.0.md  v0.2.0.md  v0.3.0.md
docs/website/: early-adopter-outreach-update-prompt.md  v0.3.0-dogfood-update-prompt.md  v0.3.0-update-prompt.md
examples/basic/: CMakeLists.txt  main.cpp  user.hpp
src/backends/nlohmann/: cpp_generator.cpp  cpp_generator.hpp
src/core/ir/: model.hpp
src/frontends/cxx/parser/: parser.cpp  parser.hpp  syntax.hpp
src/frontends/cxx/semantic/: analysis.cpp  analysis.hpp
src/frontends/cxx/tree_sitter/: adapter.cpp  adapter.hpp
src/generator/: cpp_generator.cpp  cpp_generator.hpp
src/metadata/: model.hpp
src/parser/: parser.cpp  parser.hpp  syntax.hpp
src/semantic/: analysis.cpp  analysis.hpp
tests/backends/nlohmann/: cpp_generator_tests.cpp  fixed_width_generated_compile_tests.cpp  map_generated_compile_tests.cpp  pipeline_golden_tests.cpp  practical_generated_compile_tests.cpp
tests/core/ir/: model_tests.cpp
tests/fixtures/: parser_practical_models.hpp  pipeline_map_user.hpp  v03_practical_models.hpp
tests/fixtures/cli_multi/: address.hpp  user.hpp
tests/frontends/cxx/parser/: parser_tests.cpp  syntax_tests.cpp
tests/frontends/cxx/semantic/: analysis_tests.cpp
tests/frontends/cxx/tree_sitter/: adapter_tests.cpp  build_smoke_tests.cpp
tests/generator/: cpp_generator_tests.cpp  pipeline_golden_tests.cpp
tests/golden/: basic_pipeline.expected.cjm.hpp  basic_user.actual.cjm.hpp  basic_user.expected.cjm.hpp  cli_multi.expected.cjm.hpp  map_user.expected.cjm.hpp  v03_practical.expected.cjm.hpp
tests/metadata/: model_tests.cpp
tests/parser/: parser_tests.cpp  syntax_tests.cpp
tests/semantic/: analysis_tests.cpp
tools/cjm/: main.cpp
